--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,23 +1,29 @@
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
-
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "ir.ehsanet.hashpod.kotlinmvvm"
+        applicationId "ir.ehsanet.kotlinmvvm"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+
+        debug{
+
         }
     }
     compileOptions {
@@ -26,7 +32,7 @@ android {
     }
 
     project.ext {
-        dagger_version = "2.15"
+        dagger2_version = "2.15"
         arch = "1.1.1"
     }
 }
@@ -48,10 +54,14 @@ dependencies {
     annotationProcessor "android.arch.lifecycle:compiler:$project.arch"
 
 
-    implementation "com.google.dagger:dagger:$project.dagger_version"
-    implementation "com.google.dagger:dagger-android:$project.dagger_version"
-    implementation "com.google.dagger:dagger-android-support:$project.dagger_version"
-    annotationProcessor "com.google.dagger:dagger-compiler:$dagger_version"
-    annotationProcessor "com.google.dagger:dagger-android-processor:$dagger_version"
+    // dependency injection
+    implementation "com.google.dagger:dagger:$project.dagger2_version"
+    implementation "com.google.dagger:dagger-android:$project.dagger2_version"
+    implementation "com.google.dagger:dagger-android-support:$project.dagger2_version"
+    kapt "com.google.dagger:dagger-compiler:$project.dagger2_version"
+    kapt "com.google.dagger:dagger-android-processor:$project.dagger2_version"
+    annotationProcessor "com.google.dagger:dagger-compiler:$project.dagger2_version"
+    compileOnly 'javax.annotation:jsr250-api:1.0'
+    implementation 'javax.inject:javax.inject:1'
 
 }
