--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,29 +38,45 @@ android {
     }
 
     kotlin {
-        experimental {
-            coroutines "enable"
-        }
 
     }
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    //AndroidX
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.core:core-ktx:1.0.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    // AndroidX Data Binding
+    kapt 'androidx.databinding:databinding-compiler:3.2.1'
+
+    // AndroidX LiveData and ViewModel
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+
+    // Google Material
+    implementation 'com.google.android.material:material:1.0.0'
+
+    // Kotlin
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.10'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
+
+    // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.8.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+
     implementation 'com.google.code.gson:gson:2.8.5'
 
-    implementation "android.arch.lifecycle:runtime:$project.arch"
-    implementation "android.arch.lifecycle:extensions:$project.arch"
-    annotationProcessor "android.arch.lifecycle:compiler:$project.arch"
-
+    // Tests
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 
     // dependency injection
     implementation "com.google.dagger:dagger:$project.dagger2_version"
@@ -68,14 +84,4 @@ dependencies {
     implementation "com.google.dagger:dagger-android-support:$project.dagger2_version"
     kapt "com.google.dagger:dagger-compiler:$project.dagger2_version"
     kapt "com.google.dagger:dagger-android-processor:$project.dagger2_version"
-    annotationProcessor "com.google.dagger:dagger-compiler:$project.dagger2_version"
-    compileOnly 'javax.annotation:jsr250-api:1.0'
-    implementation 'javax.inject:javax.inject:1'
-
-
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.5"
-
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.22.5"
-    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-experimental-adapter:1.0.0"
-
 }
