--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ android {
         dagger2_version = "2.15"
         arch = "1.1.1"
         anko_version = "0.10.8"
+        room_version = "2.0.0"
+        lifecycle_version ="2.0.0"
+        rx_version = "2.2.4"
     }
 
     kotlin {
@@ -48,12 +51,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.core:core-ktx:1.0.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-
-    // AndroidX Data Binding
+    implementation "androidx.lifecycle:lifecycle-extensions:$project.lifecycle_version"
+    implementation "androidx.room:room-runtime:$project.room_version"
+    kapt "androidx.room:room-compiler:$project.room_version"
+    implementation "androidx.room:room-rxjava2:$project.room_version"
     kapt 'androidx.databinding:databinding-compiler:3.2.1'
-
-    // AndroidX LiveData and ViewModel
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
     // Google Material
     implementation 'com.google.android.material:material:1.0.0'
@@ -70,7 +72,6 @@ dependencies {
     implementation 'com.squareup.moshi:moshi-kotlin:1.8.0'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
-
     implementation 'com.google.code.gson:gson:2.8.5'
 
     // Tests
@@ -84,4 +85,6 @@ dependencies {
     implementation "com.google.dagger:dagger-android-support:$project.dagger2_version"
     kapt "com.google.dagger:dagger-compiler:$project.dagger2_version"
     kapt "com.google.dagger:dagger-android-processor:$project.dagger2_version"
+
+    implementation "io.reactivex.rxjava2:rxjava:$project.rx_version"
 }
